[package]
name = "rclua"
version = "1.0.0"
edition = "2021"
build = "build.rs"
authors = ["flucium"]
license = "MIT"
repository = "https://github.com/flucium/rclua"
readme = "README.md"
keywords = ["ffi", "rust", "lua"]
description = "Execute Lua in Rust."

include = ["src/**/*", "c/**/*", "lua-5.4.6/**/*","lua-5.4.0/**/*", "build.rs"]

exclude = ["./c","./lua-5.4.6","./lua-5.4.0"]

[dependencies]
libc = "0.2.154"

[build-dependencies]
cc = "1.0.97"
bindgen = "0.69.4"