[package]
name = "rclua"
version = "1.0.1"
edition = "2021"
build = "build.rs"
authors = ["flucium"]
license = "MIT"
repository = "https://github.com/flucium/rclua"
readme = "README.md"
keywords = ["lua", "rust", "rclua"]
description = "Execute Lua in Rust."

include = ["src/**/*", "c/*.a", "lua-*/**/*.o", "lua-*/*.a", "build.rs"]

exclude = ["./c","./lua-5.4.6","./lua-5.4.0", "./benches"]

[dependencies]
libc = "0.2.154"

[build-dependencies]
cc = "1.1.13"
bindgen = "0.70.0"